change template engine to art-template

--- a/ltgenp/index.html
+++ b/ltgenp/index.html
@@ -2,7 +2,6 @@
 <html>
 
 <link rel="stylesheet" type="text/css" href="src/styles/index.css">
-<link rel="stylesheet" type="text/css" href="node_modules/ace-builds/src-noconflict/twilight.css">
 
 <body onload="onLoad()" class="flex-column-aligner">
 
@@ -10,7 +9,7 @@
                 size-100-h
                 vh-center-aligner">
         <div class="h-center-aligner">
-            <a href="https://github.com/janl/mustache.js#templates" target="_blank">Template Usage</a>
+            <a href="https://aui.github.io/art-template/docs/syntax.html" target="_blank">Template Usage</a>
 
             <div class="flex-row-aligner">
                 <button class="size-100-w
@@ -48,6 +47,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="node_modules/mustache/mustache.js"></script>
 <script src="node_modules/store/dist/store.legacy.min.js"></script>
+<script src="node_modules/art-template/lib/template-web.js"></script>
 <script src="node_modules/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 
 <script src="src/scripts/helper.js"></script>
