--- a/ltgenp/index.html
+++ b/ltgenp/index.html
@@ -45,12 +45,14 @@
 </body>
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="node_modules/lodash/lodash.min.js"></script>
 <script src="node_modules/mustache/mustache.js"></script>
 <script src="node_modules/store/dist/store.legacy.min.js"></script>
 <script src="node_modules/art-template/lib/template-web.js"></script>
 <script src="node_modules/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 
 <script src="src/scripts/helper.js"></script>
+<script src="src/scripts/pipe.js"></script>
 <script src="src/scripts/index.js"></script>
 
 </html>
