--- a/ltgenp/index.html
+++ b/ltgenp/index.html
@@ -52,7 +52,9 @@
 <script src="node_modules/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 
 <script src="src/scripts/helper.js"></script>
-<script src="src/scripts/pipe.js"></script>
+<script src="src/scripts/pipes/go.js"></script>
+<script src="src/scripts/pipes/ts.js"></script>
+<script src="src/scripts/pipes/pipe.js"></script>
 <script src="src/scripts/index.js"></script>
 
 </html>
