--- a/onix-web/index.html
+++ b/onix-web/index.html
@@ -1,60 +1,14 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 
-<link rel="stylesheet" type="text/css" href="src/styles/index.css">
+<head>
+  <meta charset="utf-8">
+  <title>onix-web</title>
+</head>
 
-<body onload="onLoad()" class="flex-column-aligner">
-
-    <div class="percent-100-w
-                size-100-h
-                vh-center-aligner">
-        <div class="h-center-aligner">
-            <a href="https://aui.github.io/art-template/docs/syntax.html" target="_blank">Template Usage</a>
-
-            <div class="flex-row-aligner">
-                <button class="size-100-w
-                            size-50-h" onclick="generate()">
-                    Generate!
-                </button>
-                <div class="size-15-w"></div>
-                <button class="size-100-w
-                            size-50-h" onclick="copyResult()">
-                    Copy
-                </button>
-            </div>
-        </div>
-    </div>
-
-    <div class="percent-100-w
-                flex-remain-space
-                h-space-between-aligner">
-        <div class="percent-100-h
-                    percent-30-w">
-            <div id="template" class="percent-100-wh"></div>
-        </div>
-        <div class="percent-100-h
-                    percent-30-w">
-            <div id="data" class="percent-100-wh"></div>
-        </div>
-        <div class="percent-100-h
-                    percent-30-w">
-            <div id="result" class="percent-100-wh"></div>
-        </div>
-    </div>
-
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
 </body>
-
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="node_modules/lodash/lodash.min.js"></script>
-<script src="node_modules/mustache/mustache.js"></script>
-<script src="node_modules/store/dist/store.legacy.min.js"></script>
-<script src="node_modules/art-template/lib/template-web.js"></script>
-<script src="node_modules/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
-
-<script src="src/scripts/helper.js"></script>
-<script src="src/scripts/pipes/go.js"></script>
-<script src="src/scripts/pipes/ts.js"></script>
-<script src="src/scripts/pipes/pipe.js"></script>
-<script src="src/scripts/index.js"></script>
 
 </html>
